--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=app
-logging.level.org.springframework=debug
-
-currency-service.url=http://default.in28minutes.com
-currency-service.username=defaultusername
-currency-service.key=defaultkey
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+spring.h2.console.enabled=true
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.username=sa
+spring.datasource.password=
